# react-native-jsi-bridge-2

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-jsi-bridge-2.podspec  react-native-jsi-bridge.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: JsiBridge.cpp  JsiBridge.h
android/src/main/java/com/reactnativejsibridge/: JsiBridge.java  JsiBridgeModule.java  JsiBridgePackage.java
example/: app.json  babel.config.js  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/: .xcode.env.local  File.swift  JsiBridge2Example-Bridging-Header.h  JsiBridgeExample-Bridging-Header.h  Podfile
example/ios/JsiBridge2Example/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/JsiBridge2Example.xcodeproj/: project.pbxproj
example/ios/JsiBridge2Example.xcworkspace/: contents.xcworkspacedata
example/ios/JsiBridge2ExampleTests/: JsiBridge2ExampleTests.m
example/ios/JsiBridgeExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/JsiBridgeExample.xcodeproj/: project.pbxproj
example/ios/JsiBridgeExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: JsiBridge.h  JsiBridge.m  JsiBridgeEmitter.h  JsiBridgeEmitter.mm  JsiBrigeEmitter.h  JsiBrigeEmitter.mm  JsiUtils.h  _JsiBridge.h  _JsiBridge.mm
ios/JsiBridge.xcodeproj/: project.pbxproj
src/: index.tsx
(+12 files in other folders)
